[package]
name = "game_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic", "wayland"] }
#bevy = { version = "0.9.0" }
bevy-inspector-egui = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # important! wgpu/bevy needs this

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
